--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="darkGrayText">#44546A</color>
     <color name="darkGrayHard">#1A1A1A</color>
     <color name="navyBlue">#000080</color>
+    <color name="greenCode">#009933</color>
 </resources>
