--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,19 @@
         <item name="android:textSize">24sp</item>                        <!-- Tamanho do texto -->
         <item name="cornerRadius">22dp</item>                            <!-- Cantos arredondados -->
         <item name="strokeWidth">3dp</item>                              <!-- Largura da borda -->
-        <item name="android:layout_marginLeft">5dp</item>                <!-- Margem esquerda -->
-        <item name="android:layout_marginRight">5dp</item>               <!-- Margem direita -->
+        <item name="android:layout_marginLeft">10dp</item>                <!-- Margem esquerda -->
+        <item name="android:layout_marginRight">10dp</item>               <!-- Margem direita -->
     </style>
+
+    <style name="standardButtonSmall" parent="Widget.Material3.Button.OutlinedButton">
+        <item name="strokeColor">?attr/clrStdBtn_Border</item>           <!-- Cor da borda -->
+        <item name="backgroundTint">?attr/clrStdBtn_Background</item>    <!-- Cor de fundo -->
+        <item name="android:textColor">?attr/clrStdBtn_Text</item>       <!-- Cor do texto -->
+        <item name="android:textStyle">bold</item>                       <!-- Texto em Negrito -->
+        <item name="android:textSize">16sp</item>                        <!-- Tamanho do texto -->
+        <item name="cornerRadius">20dp</item>                            <!-- Cantos arredondados -->
+        <item name="strokeWidth">3dp</item>                              <!-- Largura da borda -->
+    </style>
+
+
 </resources>
