--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,18 +38,18 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tltSerial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:text="@string/lbTitleSerial"
         android:textColor="?attr/colorText"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
-        app:layout_constraintStart_toStartOf="@+id/scrollView2" />
+        app:layout_constraintBottom_toTopOf="@+id/scrollSerial"
+        app:layout_constraintStart_toStartOf="@+id/scrollSerial" />
 
     <ScrollView
-        android:id="@+id/scrollView2"
+        android:id="@+id/scrollSerial"
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginStart="20dp"
@@ -143,8 +143,8 @@
         android:layout_marginBottom="10dp"
         android:onClick="limparSerial"
         android:text="@string/btnCleanSerial"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
-        app:layout_constraintEnd_toEndOf="@+id/scrollView2" />
+        app:layout_constraintBottom_toTopOf="@+id/scrollSerial"
+        app:layout_constraintEnd_toEndOf="@+id/scrollSerial" />
 
     <EditText
         android:id="@+id/txtMensageText"
