--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,15 +4,27 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorMainScreen">@color/white</item>
-        <item name="colorText">@color/darkGrayText</item>
+        <item name="colorText">@color/darkGray</item>
         <item name="clrScrViw_Border">@color/blueFacebook</item>
 
         <item name="clrStdBtn_Border">@color/blueFacebook</item>
         <item name="clrStdBtn_Background">@color/white</item>
         <item name="clrStdBtn_Text">@color/blueFacebook</item>
 
+
+        <item name="clrBtnConfig_Border">@color/darkGray</item>
+        <item name="clrBtnConfig_Background">@color/lightGray</item>
+        <item name="clrBtnConfig_Text">@color/darkGray</item>
+
     </style>
 
     <style name="Theme.Base_Websocket" parent="Base.Theme.Base_Websocket" />
+    <style name="Theme.Base_Websocket.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.Base_Websocket.AppBarOverlay"
+        parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.Base_Websocket.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
