--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blueFacebook">#0866FF</color>
-    <color name="darkGrayText">#44546A</color>
     <color name="darkGrayHard">#1A1A1A</color>
+    <color name="darkGray">#444444</color>
+    <color name="lightGray">#D3D3D3	</color>
     <color name="navyBlue">#000080</color>
     <color name="greenCode">#009933</color>
 </resources>
