--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:onClick="conectar"
-                    android:text="@string/btnConnec" />
+                    android:text="@string/btnConnect" />
 
                 <Button
                     android:id="@+id/btnDesconecta"
@@ -146,7 +146,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:text="@string/lbTitleSerial"
+                android:text="@string/tltSerial"
                 android:textColor="?attr/colorText"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toTopOf="@+id/scrollSerial"
