--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="?attr/colorMainScreen"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -42,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="@string/lbTitleSerial"
+        android:text="@string/tltSerial"
         android:textColor="?attr/colorText"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/scrollSerial"
@@ -97,7 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="conectar"
-            android:text="@string/btnConnec" />
+            android:text="@string/btnConnect" />
 
         <Button
             android:id="@+id/btnDesconecta"
