--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="lightGray">#D3D3D3	</color>
     <color name="navyBlue">#000080</color>
     <color name="greenCode">#009933</color>
+    <color name="blueLabelConfigWiFi">#377AFF</color>
 </resources>
