--- a/app/src/main/res/layout/activity_configuration_wi_fi.xml
+++ b/app/src/main/res/layout/activity_configuration_wi_fi.xml
@@ -2,155 +2,184 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="?attr/colorMainScreen"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ConfigurationWiFi">
 
     <TextView
-        android:textColor="?attr/colorText"
         android:id="@+id/tltConfigurations"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:text="@string/tltSETTINGS"
+        android:textColor="?attr/colorText"
         android:textSize="34sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnConnect"
         style="@style/btnConfigWiFi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:text="@string/btnConnect"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="148dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tltConfigDevice" />
 
     <TextView
-        android:textColor="?attr/colorText"
         android:id="@+id/tltConfigDevice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:text="@string/tltConfigureDevice"
+        android:textColor="?attr/colorText"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="22dp"
-        tools:layout_editor_absoluteY="86dp" />
-
-    <EditText
-        android:id="@+id/editTextNumber5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="8.8.8.8"
-        android:inputType="number"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="865dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tltConfigurations" />
 
     <TextView
+        android:id="@+id/lblPassword"
         style="@style/lblConfigWiFi"
-        android:id="@+id/lblIP5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
+        android:text="@string/tltPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtSSID" />
+
+    <TextView
+        android:id="@+id/lblIP5"
+        style="@style/lblConfigWiFi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
         android:text="@string/tltDNS"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="833dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />
 
     <EditText
         android:id="@+id/editTextNumber3"
+        style="@style/txtConfigWiFi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:ems="10"
         android:hint="255.255.255.0"
         android:inputType="number"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="777dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblIP3" />
 
     <TextView
-        style="@style/lblConfigWiFi"
         android:id="@+id/lblIP3"
+        style="@style/lblConfigWiFi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
         android:text="@string/tltSubnetMask"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="745dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4" />
 
     <EditText
         android:id="@+id/editTextNumber4"
+        style="@style/txtConfigWiFi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:ems="10"
         android:hint="192.168.0.1"
         android:inputType="number"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="671dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblIP4" />
 
     <TextView
-        style="@style/lblConfigWiFi"
         android:id="@+id/lblIP4"
+        style="@style/lblConfigWiFi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
         android:text="@string/tltDefaultGateway"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="639dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />
 
     <EditText
         android:id="@+id/editTextNumber2"
+        style="@style/txtConfigWiFi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:ems="10"
         android:hint="192.168.0.130"
         android:inputType="number"
-        tools:layout_editor_absoluteX="22dp"
-        tools:layout_editor_absoluteY="567dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblIP2" />
 
     <TextView
-        style="@style/lblConfigWiFi"
         android:id="@+id/lblIP2"
+        style="@style/lblConfigWiFi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
         android:text="@string/tltIPAddress"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="535dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
 
     <EditText
         android:id="@+id/txtPassword"
+        style="@style/txtConfigWiFi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:ems="10"
+        android:hint="*****"
         android:inputType="textPassword"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="476dp" />
-
-    <TextView
-        style="@style/lblConfigWiFi"
-        android:id="@+id/lblPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/tltPassword"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="448dp" />
+        app:layout_constraintTop_toBottomOf="@+id/lblPassword" />
 
     <EditText
+        android:id="@+id/editTextNumber5"
         style="@style/txtConfigWiFi"
-        android:id="@+id/txtSSID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:ems="10"
+        android:hint="8.8.8.8"
+        android:inputType="number"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblIP5" />
+
+    <EditText
+        android:id="@+id/txtSSID"
+        style="@style/txtConfigWiFi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:ems="10"
         android:hint="@string/hntMyWiFiAddress"
         android:inputType="text"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="270dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblSSID" />
 
     <TextView
         android:id="@+id/lblSSID"
         style="@style/lblConfigWiFi"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
         android:text="@string/tltWiFiNetworkSSID"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="222dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btnConnect" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
