--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="blueFacebook">#0866FF</color>
+    <!-- Cores Saturadas -->
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="green">#00FF00</color>
+    <color name="blue">#0000FF</color>
+
+    <!-- Cores Nomeadas -->
+    <color name="black_system">#141118</color>
+    <color name="white_system">#FEF7FF</color>
+    <color name="blue_system">#377AFF</color>
+    <color name="green_system">#009933</color>
     <color name="darkGrayHard">#1A1A1A</color>
     <color name="darkGray">#444444</color>
-    <color name="lightGray">#D3D3D3	</color>
+    <color name="lightGray">#A8A3AA</color>
     <color name="navyBlue">#000080</color>
-    <color name="greenCode">#009933</color>
-    <color name="blueLabelConfigWiFi">#377AFF</color>
 </resources>
